js/js.translator/testData/incremental/invalidation/fakeOverrideClassFunctionQualifiers/lib1/l1.3.kt
open class Module2OpenClass {
    public fun testFunction2() = 2
    public fun testFunction22() = 22

    public konst testField222: Int
        get() = 222
}
